# iam-local-rag

./: .env.example  .gitignore  .harness-hash  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  TEST_AUDIT.md  pyproject.toml  setup.cfg
.beads/: .gitignore  interactions.jsonl  issues.jsonl  metadata.json
.github/workflows/: ci.yml
000-docs/: 000-INDEX.md  003-DR-REFF-readme.md  007-AA-AUDR-architecture-audit.md  007-AA-AUDT-backlog-zero-revival-manifest-2026-07-02.md  008-AA-AACR-implementation-aar.md  009-TQ-AUDT-testing-quality-field-audit.md  010-AA-AACR-testing-remediation-aar.md
03-Tests/: conftest.py  test_api.py  test_api_auth.py  test_api_mocked.py  test_architecture.py  test_bdd_acceptance.py  test_cli.py  test_evals.py  test_imports.py  test_integration.py  test_ledger.py  test_ledger_chain.py  test_policy.py  test_privacy_gate.py  test_properties.py  test_providers.py  test_retrieval.py  test_router.py  test_streamlit_smoke.py
99-Archive/: 500-upgrade-summary-phases-2-4.md  501-REPT-nexus-release-v1.1.0.md  README.md  app.py
features/: acceptance_invariants.feature
nexus/: cli.py
nexus/api/: server.py
nexus/core/: config.py  ledger.py  models.py  policy.py  rag_pipeline.py  router.py
nexus/core/providers/: anthropic_provider.py  base.py  ollama_provider.py  openai_provider.py  profiles.py  vertex_provider.py
nexus/evals/: __init__.py  base.py  dataset.py  fakes.py  groundedness.py  harness.py  run.py
nexus/evals/metrics/: citation_coverage.py  groundedness_metric.py  injection_resistance.py  latency.py  privacy_leak.py  provider_parity.py  recall_at_k.py  refusal_correctness.py
nexus/retrieval/: __init__.py  base.py  chroma_retriever.py  citation_verifier.py  embedding_adapter.py  factory.py  qmd_retriever.py
tests/: TESTING.md
